--- a/index.html
+++ b/index.html
@@ -1,98 +1,243 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Chat Jurídico</title>
-    <style>
-        body { font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-        #chatContainer { border: 1px solid #ddd; border-radius: 8px; padding: 20px; margin-top: 20px; }
-        #messages { height: 400px; overflow-y: auto; margin-bottom: 20px; }
-        .message { margin-bottom: 10px; padding: 10px; border-radius: 5px; }
-        .user { background-color: #e3f2fd; align-self: flex-end; }
-        .assistant { background-color: #f5f5f5; }
-        #userInput { width: 70%; padding: 10px; }
-        button { padding: 10px 20px; background-color: #4CAF50; color: white; border: none; cursor: pointer; }
-        .loader { display: none; border: 4px solid #f3f3f3; border-top: 4px solid #3498db; border-radius: 50%; width: 30px; height: 30px; animation: spin 1s linear infinite; margin: 10px auto; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    </style>
+  <meta charset="UTF-8">
+  <title>Assistente Jurídico Migratório</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      text-align: center;
+      padding: 20px;
+      color: #2c3e50;
+    }
+
+    #chatContainer {
+      background: #ffffff;
+      max-width: 800px;
+      margin: 20px auto;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+      padding: 20px;
+    }
+
+    #messages {
+      height: 400px;
+      overflow-y: auto;
+      padding-right: 10px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+
+    .message {
+      margin-bottom: 15px;
+      padding: 12px 16px;
+      border-radius: 10px;
+      max-width: 90%;
+      white-space: pre-wrap;
+    }
+
+    .user {
+      background-color: #e3f2fd;
+      align-self: flex-end;
+    }
+
+    .assistant {
+      background-color: #f0f0f0;
+    }
+
+    .file-msg {
+      font-style: italic;
+      color: #555;
+    }
+
+    #controls {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    #userInput {
+      flex-grow: 1;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      padding: 12px 18px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    #sendBtn {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    #fileBtn {
+      background-color: #2196F3;
+      color: white;
+    }
+
+    .loader {
+      display: none;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      animation: spin 1s linear infinite;
+      margin: 10px auto;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
-    <h1>Análise Jurídica Migratória</h1>
-    <div id="chatContainer">
-        <div id="messages"></div>
-        <input type="text" id="userInput" placeholder="Digite sua pergunta...">
-        <button onclick="sendMessage()">Enviar</button>
-        <div id="loader" class="loader"></div>
+
+  <h1>Assistente Jurídico para Imigração</h1>
+
+  <div id="chatContainer">
+    <div id="messages"></div>
+
+    <div id="controls">
+      <input type="file" id="fileInput" style="display: none;" accept=".pdf,.docx,.txt,.doc">
+      <button id="fileBtn" onclick="document.getElementById('fileInput').click()">📎 Arquivo</button>
+      <input type="text" id="userInput" placeholder="Digite sua dúvida jurídica...">
+      <button id="sendBtn" onclick="sendMessage()">Enviar</button>
     </div>
 
-    <script>
-        let sessionId = localStorage.getItem('sessionId') || null;
+    <div id="loader" class="loader"></div>
+  </div>
 
-        function displayMessage(role, content) {
-            const messagesDiv = document.getElementById('messages');
-            const messageDiv = document.createElement('div');
-            messageDiv.className = `message ${role}`;
-            messageDiv.innerHTML = `<strong>${role === 'user' ? 'Você' : 'Assistente'}:</strong> ${content}`;
-            messagesDiv.appendChild(messageDiv);
-            messagesDiv.scrollTop = messagesDiv.scrollHeight;
-        }
+  <script>
+    let sessionId = localStorage.getItem('sessionId') || null;
+    let selectedFile = null;
 
-        async function sendMessage() {
-            const userInput = document.getElementById('userInput');
-            const loader = document.getElementById('loader');
-            const button = document.querySelector('button');
+    async function ensureSession() {
+      if (!sessionId) {
+        const res = await fetch('http://localhost:8000/start-session', { method: 'POST' });
+        const data = await res.json();
+        sessionId = data.session_id;
+        localStorage.setItem('sessionId', sessionId);
+      }
+    }
 
-            if (!userInput.value.trim()) return;
+    function displayMessage(role, content, isFile = false) {
+      const messagesDiv = document.getElementById('messages');
+      const messageDiv = document.createElement('div');
+      messageDiv.className = `message ${role} ${isFile ? 'file-msg' : ''}`;
+      messageDiv.innerHTML = `<strong>${role === 'user' ? 'Você' : 'Assistente'}:</strong> ${content}`;
+      messagesDiv.appendChild(messageDiv);
+      messagesDiv.scrollTop = messagesDiv.scrollHeight;
+    }
 
-            const message = userInput.value;
-            userInput.value = '';
-            button.disabled = true;
-            loader.style.display = 'block';
+    document.getElementById('fileInput').addEventListener('change', async function (e) {
+      selectedFile = e.target.files[0];
+      if (selectedFile) {
+        await ensureSession();
+        displayMessage('user', `📎 Arquivo anexado: ${selectedFile.name}`, true);
+        uploadFile(selectedFile);
+      }
+    });
 
-            displayMessage('user', message);
+    async function uploadFile(file) {
+      const formData = new FormData();
+      formData.append('file', file);
+      formData.append('session_id', sessionId);
 
-            try {
-                const response = await fetch('https://cors-anywhere.herokuapp.com/http://0.0.0.0:5000/ask-deepseek', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ 
-                        message: message,
-                        session_id: sessionId 
-                    })
-                });
-
-                const data = await response.json();
-
-                if (!response.ok) {
-                    throw new Error(data.detail || "Erro na API");
-                }
-
-                displayMessage('assistant', data.response);
-                
-                // Atualiza o sessionId se for uma nova sessão
-                if (data.session_id && data.session_id !== sessionId) {
-                    sessionId = data.session_id;
-                    localStorage.setItem('sessionId', sessionId);
-                }
-
-                // Opcional: Carregar histórico completo se necessário
-                if (data.history) {
-                    // Implemente se quiser reprocessar todo o histórico
-                }
-
-            } catch (error) {
-                console.error("Erro:", error);
-                displayMessage('assistant', `Erro: ${error.message}`);
-            } finally {
-                button.disabled = false;
-                loader.style.display = 'none';
-            }
-        }
-
-        // Enter key support
-        document.getElementById('userInput').addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') sendMessage();
+      try {
+        const response = await fetch('http://localhost:8000/upload-file', {
+          method: 'POST',
+          body: formData,
         });
-    </script>
+
+        const result = await response.json();
+        if (!response.ok) throw new Error(result.detail);
+        console.log('Arquivo enviado:', result.file_name);
+      } catch (error) {
+        console.error('Erro no upload:', error);
+        displayMessage('assistant', `❌ Falha ao enviar arquivo: ${error.message}`);
+      }
+    }
+
+    async function sendMessage() {
+      const userInput = document.getElementById('userInput');
+      const loader = document.getElementById('loader');
+      const button = document.getElementById('sendBtn');
+
+      if (!userInput.value.trim() && !selectedFile) return;
+
+      const message = userInput.value;
+      userInput.value = '';
+      button.disabled = true;
+      loader.style.display = 'block';
+
+      await ensureSession();
+
+      if (message) displayMessage('user', message);
+
+      try {
+        const payload = {
+          user_message: message,
+          session_id: sessionId
+        };
+
+        const response = await fetch('http://localhost:8000/ask-deepseek', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Session-ID': sessionId
+          },
+          body: JSON.stringify(payload)
+        });
+
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.detail || "Erro na API");
+
+        displayMessage('assistant', data.response);
+
+        if (data.session_id && data.session_id !== sessionId) {
+          sessionId = data.session_id;
+          localStorage.setItem('sessionId', sessionId);
+        }
+
+      } catch (error) {
+        console.error("Erro:", error);
+        displayMessage('assistant', `❌ Erro: ${error.message}`);
+        sessionId = null;
+        localStorage.removeItem('sessionId');
+      } finally {
+        button.disabled = false;
+        loader.style.display = 'none';
+        selectedFile = null;
+        document.getElementById('fileInput').value = '';
+      }
+    }
+
+    document.getElementById('userInput').addEventListener('keypress', function (e) {
+      if (e.key === 'Enter') sendMessage();
+    });
+  </script>
+
 </body>
 </html>
